// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly when checked 1`] = `
<div
  className="components-radio-button-index-m__container-checked components-radio-button-index-m__container"
>
  <input
    checked={true}
    className="components-radio-button-index-m__input"
    id="the-value"
    name="the-name"
    onChange={[Function]}
    tabIndex="0"
    type="radio"
  />
  <label
    className="components-radio-button-index-m__label"
    htmlFor="the-value"
  >
    <span>
      The Label
    </span>
  </label>
</div>
`;

exports[`should render correctly when not checked 1`] = `
<div
  className="components-radio-button-index-m__container"
>
  <input
    checked={false}
    className="components-radio-button-index-m__input"
    id="the-value"
    name="the-name"
    onChange={[Function]}
    tabIndex="0"
    type="radio"
  />
  <label
    className="components-radio-button-index-m__label"
    htmlFor="the-value"
  >
    <span>
      The Label
    </span>
  </label>
</div>
`;
